@@ -248,6 +248,9 @@
       \item Error messages involving non-syntactic names (e.g. as produced
       by \code{`\\r`} when that object does not exist) now encode
       the control characters.  (Reported by Hadley Wickham.)
+
+      \item \code{rasterImage()} and \code{grid.raster()} now give
+      error on empty (zero-length) raster.  (Reported by Ben.)
     }
   }
 }
